# CodeCountTool

./: .gitignore  CMakeLists.txt  CountCode.cpp  CountCode.h  CountCode.ui  README.en.md  README.md  main.cpp  res.qrc
Res/: style.css
RippleButton/: RippleButton.cpp  RippleButton.h
